<resources>
    <string name="app_name">My Application</string>
    <string name="contact">Contact</string>
    <string name="documents">Documents</string>
    <string name="read_more">To’liq ma’lumotlar…</string>
    <string name="normativ_huquqiy_hujjatlar">Normativ-huquqiy hujjatlar</string>
    <string name="main_title">Ko\'chmas Mulk Ob\'ektlariga Bo\'lgan Huquqlarning Davlat Reestri</string>
    <string name="cad_text">Kadastr raqami bo\'yicha</string>
    <string name="cad_search">Qidiruv</string>
    <string name="menu_main">Main</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_ecommerce">E-Commerce</string>
    <string name="menu_about">About</string>


    <string name="main_1_title">Ro`yxatdan o`tish</string>
    <string name="main_2_title">Obektni izlash</string>
    <string name="main_3_title">Javobni kutish</string>
    <string name="main_4_title">Ma\'lumotnomani olish</string>

    <string name="main_1_detail">Tizimda ro`yxatdan o`tish Telefon va e-mail manzilini ko`rsatish</string>
    <string name="main_2_detail">Ob\'ektning kadastr raqamini ko\'rsating Ob\'ektning turini belgilang</string>
    <string name="main_3_detail">10 daqiqa kutish 24 soat ichida elektron pochtaga yuboriladi</string>
    <string name="main_4_detail">PDF formatdagi ma\'lumotnomani yuklab olish SMS xabarnoma olish</string>

    <string name="vp_1_detail">"Tizimda ro'yxatdan o'tish Telefon va e-mail manzilini ko'rsatish"</string>
    <string name="vp_2_detail">Ob\'ektning kadastr raqamini ko\'rsating Ob\'ektning turini belgilang</string>
    <string name="vp_3_detail">10 daqiqa kutish 24 soat ichida elektron pochtaga yuboriladi</string>
    <string name="vp_4_detail">PDF formatdagi ma\'lumotnomani yuklab olish SMS xabarnoma olish</string>
    <string name="about">Biz ijtimoiy tarmoqlardamiz</string>
    <string name="about_num">+998 (71) 202-01-23</string>
    <string name="about_number">Telefon raqami</string>
    <string name="about_area">Manzil</string>
    <string name="about_area_1">Toshkent Xalqa Avtomobil Yo\'li</string>

    <string name="vp_1_title">Uy-joy bor/yo`qligi to`g`risida ma`lumotnoma</string>
    <string name="vp_2_title">Ta`qiq bor/yo`qligi to`g`risida ma`lumot berish</string>
    <string name="vp_3_title">Kadastr qiymati to`g`risida ma`lumot berish</string>
    <string name="vp_4_title">Kadastr passportini shakllantirish</string>
    <string name="vp_5_title">Ko`chirma shakllantirish</string>
    <string name="vp_6_title">Ko`chirmani tekshirish</string>
    <string name="vp_7_title">Kadastr hujjatlarini rasmiylashitirish</string>
    <string name="vp_8_title">Ijara shartnomasini ro`yxatdan o`tkazish</string>
    <string name="vp_9_title">Turar joyning maydoni bo`yicha ma`lumotnoma olish</string>
    <string name="vp_10_title">Servitutni ro`yxatdan o`tkazish</string>

    <string name="vp_1_detail">"Jismoniy shaxslarga nomida uy-joy bor/yo'qligi to'g'risida ma'lumotnoma berish"</string>
    <string name="vp_2_detail">"Ko'chmas mulkka nisbatan ta'qiq bor/yo'qligi to'g'risida ma'lumotnoma olish"</string>
    <string name="vp_3_detail">"Davlat Reestridagi har qanday ko'chmas mulk ob'ektning kadastr qiymatini bilish"</string>
    <string name="vp_4_detail">Jismoniy va yuridik shaxslarga kadastr passportini shakllantirish</string>
    <string name="vp_5_detail">"Ko'chmas mulk obyektlariga bo'lgan huquqlarni davlat ro'yxatidan o'tkazish"</string>
    <string name="vp_6_detail">"Davlat kadastr reestridan ko'chmas mulk bo'yicha ko'chirmani tekshirish"</string>
    <string name="vp_7_detail">Qurilishi tugallangan bino va inshootlarni foydalanishga qabul qilish uchun ariza topshirish va kadastr hujjatlarini rasmiylashtirish</string>
    <string name="vp_8_detail">"Bino va inshootlarni ijara shartnomasini davlat ro'yxatidan o'tkazish"</string>
    <string name="vp_9_detail">"Jismoniy va yuridik shaxslarga turar joyning maydoni bo'yicha ma'lumotnoma olish"</string>
    <string name="vp_10_detail">"O'zganing yer uchstkasidan cheklangan tarzda foydalanish huquqi (servitut) to'g'risida kelishuvni ro'yhatdan o'tkazish"</string>
    <string name="main_num">1</string>
    <string name="main_num_2">2</string>
    <string name="main_num_3">3</string>
    <string name="main_num_4">4</string>
    <string name="malumot">Rasmiy Ma`lumotnoma</string>
    <string name="malumot_2">Onlayn Tarzda Qanday Olinadi?</string>
    <string name="malumot_3">Ko\'chmas mulk Davlat reestridan onlayn tarzda ma\'lumotnoma olish yo\'riqnomasi</string>


</resources>